# libuv

./: CMakeLists.txt  android-configure
